refact: remove organization file on unit model
