# internal/utils/requests/requests.go
@@ -81,20 +81,18 @@ type AssignCourseRequest struct {
 }
 
 type UnitCreateRequest struct {
-	Title          string `json:"title" binding:"required" example:"unit title"`
-	OrganizationId string `json:"organization_id" binding:"required" example:"1"`
-	CourseId       string `json:"course_id" binding:"required" example:"1"`
-	Order          int32  `json:"order" binding:"required" example:"1"`
-	Publish        int32  `json:"publish" binding:"required" example:"1"`
+	Title    string `json:"title" binding:"required" example:"unit title"`
+	CourseId string `json:"course_id" binding:"required" example:"1"`
+	Order    int32  `json:"order" binding:"required" example:"1"`
+	Publish  int32  `json:"publish" binding:"required" example:"1"`
 }
 
 type UnitUpdateRequest struct {
-	Id             string `json:"id" binding:"required" example:"1"`
-	Title          string `json:"title" example:"unit title update"`
-	OrganizationId string `json:"organization_id" example:"1"`
-	CourseId       string `json:"course_id" example:"1"`
-	Order          int32  `json:"order" example:"1"`
-	Publish        int32  `json:"publish" example:"1"`
+	Id       string `json:"id" binding:"required" example:"1"`
+	Title    string `json:"title" example:"unit title update"`
+	CourseId string `json:"course_id" example:"1"`
+	Order    int32  `json:"order" example:"1"`
+	Publish  int32  `json:"publish" example:"1"`
 }
 
 type UnitDeleteRequest struct {
@@ -102,9 +100,8 @@ type UnitDeleteRequest struct {
 }
 
 type AssignUnitPermissionRequest struct {
-	MemberId       string `json:"member_id" binding:"required" example:"1"`
-	OrganizationId string `json:"organization_id" binding:"required" example:"1"`
-	CourseId       string `json:"course_id" binding:"required" example:"1"`
-	UnitId         string `json:"unit_id" binding:"required" example:"1"`
-	RoleId         int32  `json:"role_id" binding:"required" example:"1"`
+	MemberId string `json:"member_id" binding:"required" example:"1"`
+	CourseId string `json:"course_id" binding:"required" example:"1"`
+	UnitId   string `json:"unit_id" binding:"required" example:"1"`
+	RoleId   int32  `json:"role_id" binding:"required" example:"1"`
 }
